[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "lion-env"
version = "0.1.0"
description = "Converted from conda env.yaml"
authors = [ "Your Name <you@example.com>",]
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3"
scikit-learn = "^1.7"
matplotlib = "^3.10"
seaborn = "0.11.2"
pillow = "^11.3"
torch = "^2.7"
torchvision = "^0.22"
alive-progress = "2.2.0"
einops = "0.4.0"
fire = "0.4.0"
imageio = "^2.37"
loguru = "0.6.0"
omegaconf = "2.2.2"
opencv-python = "^4.12"
pytorch-lightning = "^2.5"
scikit-image = "^0.25"
tqdm = "4.62.3"
yacs = "0.1.8"
calmsize = "^0.1.3"
tabulate = "^0.9.0"
clip = "^0.2.0"
open3d = "^0.19.0"
diffusers = "^0.34.0"
